Moved windows packaging stuff into packaging/windows
As it has aldready been done with Linux stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.pyc
-/windows
-logmessages.txt
-library/tmp.ppf
+packaging/windows/build
+packaging/windows/temp
+pyplane/library/tmp.ppf
+pyplane/config/logmessages.txt
 .idea
